Добавил главное окно и иконки

--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
@@ -6,6 +6,20 @@
     <RootNamespace>TestCase_WPF_RSS</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <Platforms>AnyCPU;x64</Platforms>
+    <ApplicationIcon>img\logo.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="img\logo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="logo.png" />
+  </ItemGroup>
 
 </Project>
