--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
@@ -23,5 +23,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+  </ItemGroup>
 
 </Project>
