--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
@@ -27,5 +27,9 @@
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="EntityFramework\" />
+  </ItemGroup>
 
 </Project>
