--- a/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
+++ b/TestCase-WPF-RSS/TestCase-WPF-RSS/TestCase-WPF-RSS.csproj
@@ -25,11 +25,8 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Folder Include="EntityFramework\" />
   </ItemGroup>
 
 </Project>
